--- a/borders.html
+++ b/borders.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Border CSS</title>
-    <link rel="stylesheet" href="border.css">
+    <link rel="stylesheet" href="borders.css">
 </head>
 <body>
     <div class="container">
